[gd_scene load_steps=3 format=3 uid="uid://dmktu3j20o206"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_4y11a"]
[ext_resource type="PackedScene" uid="uid://c43l6q6u0hpac" path="res://scenes/player.tscn" id="3_jypdj"]

[node name="Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_4y11a")

[node name="Player" parent="." instance=ExtResource("3_jypdj")]
position = Vector2(-6, -86)

[node name="Level" type="Node2D" parent="."]

[node name="PauseLayer" type="CanvasLayer" parent="Level"]
layer = 15

[node name="PausePanel" type="Panel" parent="Level/PauseLayer"]
visible = false
top_level = true
offset_left = -29.0
offset_top = -45.0
offset_right = 1192.0
offset_bottom = 766.0

[node name="Label" type="Label" parent="Level/PauseLayer/PausePanel"]
layout_mode = 0
offset_left = 450.0
offset_top = 324.0
offset_right = 927.0
offset_bottom = 709.0
text = "PAUSED"

[node name="HUDLayer" type="CanvasLayer" parent="Level"]
layer = 15

[node name="HealthPanel" type="Panel" parent="Level/HUDLayer"]
top_level = true
layout_direction = 1
offset_left = -1.0
offset_top = -3.0
offset_right = 138.0
offset_bottom = 43.0

[node name="Label" type="Label" parent="Level/HUDLayer/HealthPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 9.0
offset_right = 66.0
offset_bottom = 32.0
text = "HEALTH"

[node name="Health" type="Label" parent="Level/HUDLayer/HealthPanel"]
layout_mode = 0
offset_left = 90.0
offset_top = 11.0
offset_right = 132.0
offset_bottom = 34.0
text = "5"

[node name="UI" type="Node2D" parent="Level/HUDLayer"]

[node name="Panels" type="Node2D" parent="Level/HUDLayer/UI"]

[node name="GameOverPanel" type="Panel" parent="Level/HUDLayer/UI/Panels"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Debug" type="Node2D" parent="Level/HUDLayer"]
top_level = true

[node name="DebugPanel" type="Panel" parent="Level/HUDLayer/Debug"]
top_level = true
layout_direction = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -231.0
offset_top = 2.0
offset_bottom = 166.0
grow_horizontal = 0

[node name="DebugText" type="Label" parent="Level/HUDLayer/Debug/DebugPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 1.0
offset_right = 200.0
offset_bottom = 24.0
text = "debug"

[node name="Pstate" type="Label" parent="Level/HUDLayer/Debug/DebugPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 130.0
offset_right = 55.0
offset_bottom = 155.0
text = "pstate"

[node name="LevelLayer" type="CanvasLayer" parent="Level"]
process_mode = 1
layer = 10
follow_viewport_enabled = true
